# ipmotd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs  model.rs  pearls.rs
