[package]
name = "ipmotd"
description = "Shell MOTD that's prints quotes from inpearls.ru webstie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.4.0"
scraper = "0.13.0"
anyhow = "1.0.58"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
home = "0.5.3"